update troubleshooting info with common issues, fix color of footer, improve appearance of header on small screens

--- a/style.css
+++ b/style.css
@@ -38,10 +38,8 @@ hr {
 }
 
 footer {
-  background-color: ;
-  
+  background-color: #1c1f22;
   border-top: 1.5px solid #4b4d50;
-
 }
 
 body {
